Fix layout issue for playlist/database hiding.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body,
   font-family: sans-serif;
 }
 .main-container {
+  position: relative;
   display: grid;
   grid-template-columns: 500px minmax(300px, 1fr);
   grid-template-rows: auto 400px minmax(300px, 1fr);
@@ -75,15 +76,6 @@ This doesn't work because it's applying filter on a different element
 .main-container:has(.left:hover) > *:not(:hover) {
   filter: blur(4px);
   transition: filter 0.2s ease;
-}
-*/
-
-/* 
-VIP user: You can just hardcode expand width here for now.
-.left:hover,
-.right:hover {
-  width: 600px;
-  z-index: 10;
 }
 */
 /* .left:hover {
@@ -233,6 +225,7 @@ input[type="number"] {
 .tab-content {
   visibility: hidden;
   position: absolute;
+  inset: 0;
   pointer-events: none;
 }
 .tab-content.active {
@@ -265,9 +258,9 @@ input[type="number"] {
   display: none !important;
 }
 .toc-horizontal {
-  display: flex; /* horizontal layout */
-  gap: 20px; /* space between items */
-  list-style: none; /* remove bullets */
+  display: flex;
+  gap: 20px;
+  list-style: none;
   padding: 0;
   margin: 0;
 }
